--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,34 @@
 <resources>
-    <string name="app_name">Taxi_Fares_Lima</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Lima Taxi Fares</string>
     <string name="action_settings">Settings</string>
-    <string name="origin_title">Origin</string>
-    <string name="destination_title">Destination</string>
+    <string name="origin_title">From</string>
+    <string name="destination_title">To</string>
     <string name="address_hint">... or enter an address</string>
+    <string name="poi_selector">select a point of interest...</string>
+    <string name="enter_an_address">... or enter an address</string>
 
-    <string name="museo_larco">Museo Larco</string>
-    <string name="museo_oro">Museo de Oro</string>
-    <string name="parque_kennedy">Parque Kennedy</string>
-    <string name="barranco">Barranco</string>
-    <string name="aeropuerto">Aeropuerto</string>
+    <string name="spinner_header">Pick a spot...</string>
+
+    <string name="museo_larco">Larco Museum</string>
+    <string name="museo_oro">Gold Museum</string>
+    <string name="parque_kennedy">Park Kennedy</string>
+    <string name="barranco">Center of Barranco</string>
+    <string name="aeropuerto">Airport</string>
     <string name="plaza_san_martin">Plaza San Martín</string>
     <string name="larcomar">Larcomar</string>
     <string name="parque_aguas">Parque de las Aguas</string>
     <string name="huaca_pucllana">Huaca Pucllana</string>
     <string name="huaca_huallamarca">Huaca Huallamarca</string>
 
-    <string name="normal_rate">The rate is ...</string>
     <string name="get_rate_button_text">Calculate the normal rate</string>
+    <string name="duration_header_string">Duration</string>
+    <string name="distance_header_string">Distance</string>
+    <string name="normal_rate_header_string">Normal rate</string>
+    <string name="from_header_string">From ...</string>
+    <string name="to_header_string">To ...</string>
+    <string name="test_config">huuhuh</string>
+
+
 
 
 </resources>
