--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Lima Taxi Fares</string>
     <string name="action_settings">Settings</string>
-    <string name="origin_title">From</string>
-    <string name="destination_title">To</string>
+    <string name="origin_title">FROM</string>
+    <string name="destination_title">TO</string>
     <string name="address_hint">... or enter an address</string>
     <string name="poi_selector">select a point of interest...</string>
     <string name="enter_an_address">... or enter an address</string>
@@ -23,7 +23,10 @@
     <string name="get_rate_button_text">Calculate the normal rate</string>
     <string name="duration_header_string">Duration</string>
     <string name="distance_header_string">Distance</string>
-    <string name="normal_rate_header_string">Normal rate</string>
+    <string name="normal_rate_header_string">Rate</string>
+    <string name="duration_unit">min</string>
+    <string name="distance_unit">km</string>
+    <string name="rate_unit">Soles</string>
     <string name="from_header_string">From ...</string>
     <string name="to_header_string">To ...</string>
     <string name="test_config">huuhuh</string>
