--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Lima Taxi Fares</string>
+    <string name="app_name">&#160;Lima Taxi Fares</string>
     <string name="action_settings">Settings</string>
     <string name="origin_title">FROM</string>
     <string name="destination_title">TO</string>
@@ -12,7 +12,7 @@
     <string name="diff_points_toast">Select different points please</string>
     <string name="select_toast">Select traject please</string>
 
-    <string name="get_rate_button_text">Calculate the rate --></string>
+    <string name="get_rate_button_text">Calculate rate --></string>
     <string name="duration_header_string">Duration</string>
     <string name="distance_header_string">Distance</string>
     <string name="normal_rate_header_string">Rate</string>
@@ -23,7 +23,7 @@
     <string name="rate_unit">Soles</string>
     <string name="from_header_string">From &#8230;</string>
     <string name="to_header_string">To &#8230;</string>
-    <string name="preferences_string">settings</string>
+    <string name="preferences_string">Settings</string>
     <string name="choose_currency">Choose your preferred currency</string>
     <string name="currency_title">Currency</string>
 
