--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">&#160;Lima Taxi Fares</string>
-    <string name="action_settings">Settings</string>
     <string name="origin_title">FROM</string>
     <string name="destination_title">TO</string>
     <string name="address_hint">&#8230; or enter an address</string>
@@ -18,9 +17,9 @@
     <string name="normal_rate_header_string">Rate</string>
     <string name="min_rate_header_string">standard</string>
     <string name="max_rate_header_string">rush hour - night</string>
-    <string name="duration_unit">min</string>
-    <string name="distance_unit">km</string>
-    <string name="rate_unit">Soles</string>
+    <string name="duration_unit" translatable="false">min</string>
+    <string name="distance_unit" translatable="false">km</string>
+    <string name="rate_unit" translatable="false">Soles</string>
     <string name="from_header_string">From &#8230;</string>
     <string name="to_header_string">To &#8230;</string>
     <string name="preferences_string">Settings</string>
